@@ -1,5 +1,13 @@
 2000-06-17  TSUCHIYA Masatoshi  <tsuchiya@pine.kuee.kyoto-u.ac.jp>
 
+	* emacs/nnmhc.el (nnmhc-request-article): Hack for
+	`gnus-bbdb/update-record'.
+
+	* emacs/mhc.el (mhc-edit): Disable to succeed to the record id of
+	the original schedule.
+
+2000-06-17  TSUCHIYA Masatoshi  <tsuchiya@pine.kuee.kyoto-u.ac.jp>
+
 	* emacs/mhc.el: Removed dependency declaration above mhc-sync.el.
 	(mhc-modify-file): Alter the file opening codes, removed `find-file-other-window'.
 	(mhc-draft-buffer-file-name): New internal variable to keep file name.
